--- a/style.css
+++ b/style.css
@@ -47,3 +47,36 @@ body {
     background-color: #d3eaed;
     cursor:pointer;
 }
+
+.calculator {
+    width: 300px;
+    margin: 20px auto;
+    padding: 20px;
+    border-radius: 10px;
+    box-shadow: 0 0 10px rgba(0, 0, 0, .5);
+  }
+  
+  .calculator form {
+    display: flex;
+    flex-direction: column;
+  }
+  
+  .calculator input {
+    margin-bottom: 10px;
+    margin-top: 5px;
+    padding: 8px;
+  }
+  
+  .calculator button {
+    padding: 10px;
+    background-color: #3498db;
+    color: white;
+    border: none;
+    border-radius: 3px;
+    cursor: pointer;
+  }
+  
+  .calculator button:hover {
+    background-color: #2980b9;
+  }
+  
